# DataStructure_In_C

./: CMakeLists.txt  README.md  base.h  main.c
Chapter1/Triplet/: Triplet.c  Triplet.h  TripletTest.c  TripletTest.cpp
Chapter2/LinearList/: SqList.c  SqList.h
